[project]
name = "repo-analyzer"
version = "0.1.0"
description = "Python-based agentic workflow engine"
authors = [
    {name = "Gabriel Cornejo",email = "gcornejo441@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pocketflow (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
repo-analyzer = "repo_analyzer.cli:main"  